--- a/index.html
+++ b/index.html
@@ -22,13 +22,7 @@
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: DevFolio
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  
 </head>
 
 <body>
@@ -37,9 +31,9 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"><img src="https://maksudgit.github.io/maksud/icon.png" alt="Maksud"></a></h1>
+      <h1 class="logo"><a href="index.html"><img src="></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="img/logo.png" alt="" class="img-fluid"></a>-->
+      <!-- <a href="index.html" class="logo"><img src="https://maksudgit.github.io/maksud/icon.png" alt="Maksud" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
