--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"><img src="></a></h1>
+      <!--h1 class="logo"><a href="index.html"><img src="https://maksudgit.github.io/maksud/icon.png" alt="Maksud"></a></h1-->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="https://maksudgit.github.io/maksud/icon.png" alt="Maksud" class="img-fluid"></a>-->
+       <a href="index.html" class="logo"><img src="https://maksudgit.github.io/maksud/icon.png" alt="Maksud" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -748,13 +748,7 @@
         <div class="col-sm-12">
           <div class="copyright-box">
             <p class="copyright">&copy; Copyright <img style="height: 20px;" src="https://maksudgit.github.io/maksud/icon.png" alt="Maksud">     . All Rights Reserved</p>
-            <div class="credits">
-              <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-            -->
+            <div class="credits"
               Designed by <a href="https://maksudword.wordpress.com/">Maksud</a>
             </div>
           </div>
